src/command/snapshots/dss__command__lexer__tests__lexing_of_redirection_without_fd.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: ">",
        token_type: Operator(
            RightPointyBracket,
        ),
        line: 0,
        range: (
            3,
            3,
        ),
    },
    Token {
        lexeme: "file.txt",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            5,
            12,
        ),
    },
]
