src/command/snapshots/dss__command__lexer__tests__lexing_of_squirrel_input_op_without_fd.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "<&",
        token_type: Operator(
            SquirrelInput,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "1",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            2,
            2,
        ),
    },
]
