src/command/snapshots/dss__command__lexer__tests__lexing_of_squirrel_output_op_diamond_with_fd.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "2",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            3,
        ),
    },
    Token {
        lexeme: "&>",
        token_type: Operator(
            SquirrelOutput,
        ),
        line: 0,
        range: (
            4,
            5,
        ),
    },
    Token {
        lexeme: "file.txt",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            7,
            14,
        ),
    },
]
