src/command/snapshots/dss__command__lexer__tests__lexing_of_squirrel_output_op_without_fd.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "/tmp/",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            7,
        ),
    },
    Token {
        lexeme: "doesnotexist",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            9,
            20,
        ),
    },
    Token {
        lexeme: "&>",
        token_type: Operator(
            SquirrelOutput,
        ),
        line: 0,
        range: (
            22,
            23,
        ),
    },
    Token {
        lexeme: "1",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            24,
            24,
        ),
    },
]
